<resources>
    <string name="app_name">RecycloMate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">Type your Email</string>
    <string name="hint_pass">Type Your Password</string>
    <string name="hint_confpass">Retype Your Password</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Sign_In">Sign In</string>
    <string name="Already_reg">Already Registered , Sign In!</string>
    <string name="Not_reg">Not Registered Yet , Sign Up!</string>
    <string name="login_as_guest_for_now">Login as Guest for now</string>
    <string name="default_web_client_id">391586904449-mucne46rdhrn2to0k6j391pqbrsvnr4o.apps.googleusercontent.com</string>

    <string name="youtube_thumbnail_desc">YouTube Video Thumbnail for Waste Management</string>
    <string name="waste_management_overview">
        <![CDATA[

        - This includes the collection, transport, treatment, and disposal of waste, together with monitoring and regulation of the waste management process and waste-related laws, technologies, and economic mechanisms.\n

        - Waste can either be solid, liquid, or gases, and each type has different methods of disposal and management.\n
        - Waste management deals with all types of waste, including industrial, biological, household, municipal, organic, biomedical, and radioactive wastes.\n
        - In some cases, waste can pose a threat to human health. Health issues are associated with the entire process of waste management.\n
        - Health issues can also arise indirectly or directly: directly through the handling of solid waste, and indirectly through the consumption of water, soil, and food.\n
        - Waste is produced by human activity, for example, the extraction and processing of raw materials.\n
        - Waste management is intended to reduce the adverse effects of waste on human health, the environment, planetary resources, and aesthetics.\n

        - The aim of waste management is to reduce the dangerous effects of such waste on the environment and human health.\n
        - A big part of waste management deals with municipal solid waste, which is created by industrial, commercial, and household activity.\n
        ]]>
    </string>
    <string name="organic">
        • <b>Organic Waste</b>:<br />\n
        \n - Compost kitchen scraps like vegetable peels, fruit rinds, and coffee grounds.<br />
        \n- Use a compost bin or pile to create nutrient-rich compost for your garden.<br /><br />
    </string>
    <string name="inorganic">
        • <b>Inorganic Waste</b>:<br />\n
        \n - Separate plastics, metals, and glass.<br />
        \n - Clean and rinse containers before recycling.<br />
        \n - Check local recycling guidelines to know what materials are accepted.<br /><br />
    </string>
    <string name="benifit">
        • <b>Benefits of Recycling for a Better World:</b><br /><br />\n
    \n• Reduces landfill waste and conserves natural resources.<br />
    \n• Decreases pollution and greenhouse gas emissions.<br />
    \n• Saves energy in manufacturing processes.<br />
    \n• Creates jobs and supports local economies.<br />
   \n • Promotes a sustainable future for generations to come.<br />

</string>
    <string name="recycling_guide">
    How to Recycle Organic and Inorganic Waste:\n<br /><br />

    • <b>Organic Waste</b>:<br />\n
     \n - Compost kitchen scraps like vegetable peels, fruit rinds, and coffee grounds.<br />
      \n- Use a compost bin or pile to create nutrient-rich compost for your garden.<br /><br />

    \n• <b>Inorganic Waste</b>:<br />
     \n - Separate plastics, metals, and glass.<br />
     \n - Clean and rinse containers before recycling.<br />
     \n - Check local recycling guidelines to know what materials are accepted.<br /><br />

   \n Benefits of Recycling for a Better World:<br /><br />

    \n• Reduces landfill waste and conserves natural resources.<br />
    \n• Decreases pollution and greenhouse gas emissions.<br />
    \n• Saves energy in manufacturing processes.<br />
    \n• Creates jobs and supports local economies.<br />
   \n • Promotes a sustainable future for generations to come.<br />

</string>


</resources>