<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_gravity="center"
                    android:layout_height="200dp"
                    android:src="@drawable/recycle_symbol"
                    android:layout_marginTop="50dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lets Recycle !!"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:textStyle="bold"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailLayout"
                    style="@style/LoginTextInputOuterFieldStyle"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_person"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEt"
                        style="@style/txtcolo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:textColorHint="#4a6572" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordLayout"
                    style="@style/LoginTextInputOuterFieldStyle"
                    android:paddingTop="20dp"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/baseline_password_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_pass"
                        android:inputType="textPassword"
                        style="@style/txtcolo"
                        android:textColorHint="#4a6572" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="vertical"
                android:paddingTop="30dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonSignin"
                    android:backgroundTint="@color/greenDark"
                    android:background="@drawable/button_background"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:text="@string/Sign_In"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/gotosignup"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:text="@string/Not_reg"
                    style="@style/TEXT"
                    android:textSize="13sp"
                    tools:ignore="TextSizeCheck" />

                <ImageView
                    android:id="@+id/googleSignInButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/google"/>

                <TextView
                    android:id="@+id/guest"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:text="@string/login_as_guest_for_now"
                    style="@style/TEXT"
                    android:textSize="13sp"
                    android:layout_marginTop="40dp"
                    tools:ignore="TextSizeCheck"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

